force-app/main/default/objects/FEC_Decision_Condition__c/FEC_Decision_Condition__c.object-meta.xml
<CustomObject>
    <description>Live Decision Condition - stores conditions for stage transition routing rules (replaces FEC_Stage_Change_Condition__c)</description>
    <label>FEC Decision Condition</label>
    <nameField>
        <displayFormat>LC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FEC Decision Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>