force-app/main/default/objects/FEC_Decision_Condition__c/fields/FEC_Decision_Rule__c.field-meta.xml
<CustomField>
    <fullName>FEC_Decision_Rule__c</fullName>
    <label>Decision Rule</label>
    <referenceTo>FEC_Decision_Rule__c</referenceTo>
    <relationshipLabel>Decision Conditions</relationshipLabel>
    <relationshipName>Decision_Conditions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>