force-app/main/default/objects/FEC_Decision_Condition__c/fields/FEC_Expression__c.field-meta.xml
<CustomField>
    <fullName>FEC_Expression__c</fullName>
    <label>Expression</label>
    <length>255</length>
    <type>Text</type>
</CustomField>